# candl

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  Jenkinsfile  Makefile.am  README  TODO  autogen.sh  configure.ac  configure.in  get_submodules.sh  libtool  redo.sh
autoconf/: candl.m4
doc/: Doxyfile.in  Makefile.in
include/: Makefile.am
include/candl/: candl.h  candl.h.in  ddv.h  dependence.h  label_mapping.h  macros.h  macros.h.in  matrix.h  options.h  piplib-wrapper.h  piplib.h.in  program.h  pruning.h  scop.h  statement.h  usr.h  util.h  violation.h
source/: Makefile.am  candl.c  ddv.c  dependence.c  isl-wrapper.c  label_mapping.c  matrix.c  matrix.c.old  options.c  piplib-wrapper.c  program.c  pruning.c  scop.c  statement.c  usr.c  util.c  violation.c
tests/: Makefile.am  Makefile.in  ax-do.dep  ax-do.depscop  ax-do.opt.scop  ax-do.scalstruct  cc1.candl  cc1.dep  check_fail.sh  check_unitary.sh  check_working.sh  checker.sh  esced.candl  esced.dep  exam98.candl  exam98.dep  gemver.dep  gemver.depscop  gemver.opt.scop  gemver.scalstruct  ics06.candl  ics06.dep  matmul.dep  matmul.depscop  matmul.opt.scop  matmul.struct  matvect.candl  matvect.dep  redo_scop.sh  relaxation.candl  relaxation.dep  swim.dep  swim.depscop  swim.opt.scop  swim.scalstruct  swim.struct
tests/include/candl/: dependence.h  matrix.h  options.h  piplib-wrapper.h  pruning.h  usr.h  violation.h
tests/transformations/must_fail/: com_add.c  com_add.c.clay.scop  com_add.c.orig.scop  com_add.c.struct  no_scalren.c  no_scalren.c.clay.scop  no_scalren.c.graph  no_scalren.c.orig.scop  no_scalren.c.struct  union1.c  union1.c.struct  union2.c  union2.c.struct  union3.c  union3.c.struct
tests/transformations/working/: can_reorder_loop.c  can_reorder_loop.c.clay.scop  can_reorder_loop.c.orig.scop  can_reorder_loop.c.struct  loulou.c  loulou.c.clay.scop  loulou.c.graph  loulou.c.orig.scop  loulou.c.struct  scalren.c  scalren.c.clay.scop  scalren.c.orig.scop  scalren.c.struct  union.c  union.c.struct
tests/unitary/: ax-do.c  ax-do.c.graph  ax-do.c.orig.scop  ax-do.c.struct  can_reorder_loop.c  can_reorder_loop.c.graph  can_reorder_loop.c.orig.scop  can_reorder_loop.c.struct  gemver.c  gemver.c.graph  gemver.c.orig.scop  gemver.c.struct  jacobi1d.c  jacobi1d.c.graph  jacobi1d.c.orig.scop  jacobi1d.c.struct  loulou.c  loulou.c.graph  loulou.c.orig.scop  loulou.c.struct  lu.c  lu.c.graph  lu.c.orig.scop  lu.c.struct  matmul.c  matmul.c.graph  matmul.c.orig.scop  matmul.c.struct  multiscop3.c.orig.scop  multiscop3.c.struct  no-unions.c  no-unions.c.struct  scalexp.c  scalexp.c.graph  scalexp.c.orig.scop  scalexp.c.struct  scalpriv.c  scalpriv.c.graph  scalpriv.c.orig.scop  scalpriv.c.struct  (+13 more)
